--- a/api-doc/class_TraceEmitter.html
+++ b/api-doc/class_TraceEmitter.html
@@ -36,8 +36,8 @@
 
 
 <h3 class="typedecl"><a name="type-bin_emitter_categorization">bin_emitter_categorization()</a></h3>
-<p><tt>bin_emitter_categorization() = <a href="#type-bin_string">bin_string()</a></tt></p>
-<p> Ex: <code>&lt;&lt;"topics.sports.basketball"&gt;&gt;</code>.</p>
+<p><tt>bin_emitter_categorization() = <a href="traces.html#type-bin_emitter_categorization">traces:bin_emitter_categorization()</a></tt></p>
+
 
 <h3 class="typedecl"><a name="type-bin_string">bin_string()</a></h3>
 <p><tt>bin_string() = <a href="text_utils.html#type-bin_string">text_utils:bin_string()</a></tt></p>
@@ -48,14 +48,8 @@
 
 
 <h3 class="typedecl"><a name="type-emitter_categorization">emitter_categorization()</a></h3>
-<p><tt>emitter_categorization() = <a href="#type-ustring">ustring()</a></tt></p>
-<p><p> The categorization of a trace emitter.</p>
+<p><tt>emitter_categorization() = <a href="traces.html#type-emitter_categorization">traces:emitter_categorization()</a></tt></p>
 
- <p>It is a plain string listing increasingly detailed trace sub-categories, 
-separated by dots.</p>
-
- Ex: "topics.sports.basketball"
-</p>
 
 <h3 class="typedecl"><a name="type-emitter_init">emitter_init()</a></h3>
 <p><tt>emitter_init() = <a href="#type-emitter_name">emitter_name()</a> | {<a href="#type-emitter_name">emitter_name()</a>, <a href="#type-emitter_categorization">emitter_categorization()</a>}</tt></p>
@@ -68,7 +62,7 @@ the class_TraceEmitter constructor.</p>
  See also the trace_categorize/1 macro.</p>
 
 <h3 class="typedecl"><a name="type-emitter_name">emitter_name()</a></h3>
-<p><tt>emitter_name() = <a href="#type-ustring">ustring()</a> | <a href="#type-bin_string">bin_string()</a></tt></p>
+<p><tt>emitter_name() = <a href="text_utils.html#type-any_string">text_utils:any_string()</a></tt></p>
 <p><p> The name of a trace emitter.</p>
 
  <p>It is a plain string or a binary one, containing the name of a trace emitter.</p>
@@ -172,20 +166,18 @@ separator).</p>
 <tr><td valign="top"><a href="#executeRequestAs-4">executeRequestAs/4</a></td><td></td></tr>
 <tr><td valign="top"><a href="#getAttribute-2">getAttribute/2</a></td><td></td></tr>
 <tr><td valign="top"><a href="#getAttributes-2">getAttributes/2</a></td><td></td></tr>
+<tr><td valign="top"><a href="#getMaybeAttribute-2">getMaybeAttribute/2</a></td><td></td></tr>
 <tr><td valign="top"><a href="#get_plain_name-1">get_plain_name/1</a></td><td>Returns the name of this trace emitter, as a plain string (not as a 
 binary).</td></tr>
+<tr><td valign="top"><a href="#get_short_description-1">get_short_description/1</a></td><td>Returns a short description of this trace emitter.</td></tr>
 <tr><td valign="top"><a href="#get_trace_timestamp-1">get_trace_timestamp/1</a></td><td>Returns the current trace-level timestamp (ex: possibly an execution tick 
 offset), or the atom 'none' if the emitter time is not known.</td></tr>
 <tr><td valign="top"><a href="#get_trace_timestamp_as_binary-1">get_trace_timestamp_as_binary/1</a></td><td>Returns the current trace-level timestamp, as a binary string.</td></tr>
 <tr><td valign="top"><a href="#hasAttribute-2">hasAttribute/2</a></td><td></td></tr>
 <tr><td valign="top"><a href="#incrementAttribute-2">incrementAttribute/2</a></td><td></td></tr>
-<tr><td valign="top"><a href="#init-1">init/1</a></td><td>Initializes some context-specific information.</td></tr>
+<tr><td valign="top"><a href="#init-1">init/1</a></td><td>Initialises some context-specific information.</td></tr>
 <tr><td valign="top"><a href="#is_wooper_debug-0">is_wooper_debug/0</a></td><td></td></tr>
 <tr><td valign="top"><a href="#popFromAttribute-2">popFromAttribute/2</a></td><td></td></tr>
-<tr><td valign="top"><a href="#post_deserialise_hook-1">post_deserialise_hook/1</a></td><td></td></tr>
-<tr><td valign="top"><a href="#post_serialise_hook-3">post_serialise_hook/3</a></td><td></td></tr>
-<tr><td valign="top"><a href="#pre_deserialise_hook-2">pre_deserialise_hook/2</a></td><td></td></tr>
-<tr><td valign="top"><a href="#pre_serialise_hook-1">pre_serialise_hook/1</a></td><td></td></tr>
 <tr><td valign="top"><a href="#register_bridge-1">register_bridge/1</a></td><td>Declares additionally a trace bridge in the process of this emitter 
 instance.</td></tr>
 <tr><td valign="top"><a href="#removeAttribute-2">removeAttribute/2</a></td><td></td></tr>
@@ -377,6 +369,12 @@ for this trace emitter to specified plain string.</td></tr>
 <p> </p>
 </div>
 
+<h3 class="function"><a name="getMaybeAttribute-2">getMaybeAttribute/2</a></h3>
+<div class="spec">
+<p><tt>getMaybeAttribute(State::<a href="wooper.html#type-state">wooper:state()</a>, AttributeName::<a href="#type-attribute_name">attribute_name()</a>) -&gt; <a href="#type-maybe">maybe</a>({value, <a href="#type-attribute_value">attribute_value()</a>})</tt><br></p>
+<p> </p>
+</div>
+
 <h3 class="function"><a name="get_plain_name-1">get_plain_name/1</a></h3>
 <div class="spec">
 <p><tt>get_plain_name(State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; <a href="#type-ustring">ustring()</a></tt><br></p>
@@ -385,6 +383,15 @@ for this trace emitter to specified plain string.</td></tr>
 binary).</p>
 
  (helper)
+</p>
+
+<h3 class="function"><a name="get_short_description-1">get_short_description/1</a></h3>
+<div class="spec">
+<p><tt>get_short_description(State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; <a href="#type-ustring">ustring()</a></tt><br></p>
+<p> </p>
+</div><p><p>Returns a short description of this trace emitter.</p>
+
+ Typically useful in traces.
 </p>
 
 <h3 class="function"><a name="get_trace_timestamp-1">get_trace_timestamp/1</a></h3>
@@ -422,7 +429,7 @@ offset), or the atom 'none' if the emitter time is not known.</p>
 <div class="spec">
 <p><tt>init(State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; <a href="wooper.html#type-state">wooper:state()</a></tt><br></p>
 <p> </p>
-</div><p><p>Initializes some context-specific information.</p>
+</div><p><p>Initialises some context-specific information.</p>
 
  (helper)
 </p>
@@ -436,30 +443,6 @@ offset), or the atom 'none' if the emitter time is not known.</p>
 <h3 class="function"><a name="popFromAttribute-2">popFromAttribute/2</a></h3>
 <div class="spec">
 <p><tt>popFromAttribute(State::<a href="wooper.html#type-state">wooper:state()</a>, AttributeName::<a href="#type-attribute_name">attribute_name()</a>) -&gt; {<a href="wooper.html#type-state">wooper:state()</a>, <a href="#type-attribute_value">attribute_value()</a>}</tt><br></p>
-<p> </p>
-</div>
-
-<h3 class="function"><a name="post_deserialise_hook-1">post_deserialise_hook/1</a></h3>
-<div class="spec">
-<p><tt>post_deserialise_hook(State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; <a href="wooper.html#type-state">wooper:state()</a></tt><br></p>
-<p> </p>
-</div>
-
-<h3 class="function"><a name="post_serialise_hook-3">post_serialise_hook/3</a></h3>
-<div class="spec">
-<p><tt>post_serialise_hook(Classname::<a href="#type-classname">classname()</a>, Entries::<a href="wooper_serialisation.html#type-term_serialisation">wooper_serialisation:term_serialisation()</a>, State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; term()</tt><br></p>
-<p> </p>
-</div>
-
-<h3 class="function"><a name="pre_deserialise_hook-2">pre_deserialise_hook/2</a></h3>
-<div class="spec">
-<p><tt>pre_deserialise_hook(SerialisationTerm::term(), UserData::<a href="basic_utils.html#type-user_data">basic_utils:user_data()</a>) -&gt; <a href="wooper_serialisation.html#type-term_serialisation">wooper_serialisation:term_serialisation()</a></tt><br></p>
-<p> </p>
-</div>
-
-<h3 class="function"><a name="pre_serialise_hook-1">pre_serialise_hook/1</a></h3>
-<div class="spec">
-<p><tt>pre_serialise_hook(State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; <a href="wooper.html#type-state">wooper:state()</a></tt><br></p>
 <p> </p>
 </div>
 
@@ -512,7 +495,7 @@ categorization.</p>
  <p>Message is a plain string, MessageCategorization as well unless it is the 
 'uncategorized' atom.</p>
 
- <p>All information available but the timestamp, determining its availability:</p>
+ <p>All information available but the timestamp, determining its availability.</p>
 
  (helper)
 </p>
@@ -543,7 +526,7 @@ categorization.</p>
 <p> </p>
 </div><p><p>Sends specified trace message.</p>
 
- <p>All information available but the timestamp, determining its availability:</p>
+ <p>All information available but the timestamp, determining its availability.</p>
 
  (helper)
 </p>
