--- a/api-doc/class_Traceable.html
+++ b/api-doc/class_Traceable.html
@@ -2,20 +2,32 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Module class_TraceSupervisor</title>
+<title>Module class_Traceable</title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css" title="EDoc">
 </head>
 <body bgcolor="white">
 <div class="navbar"><a name="#navbar_top"></a><table width="100%" border="0" cellspacing="0" cellpadding="2" summary="navigation bar"><tr><td><a href="overview-summary.html" target="overviewFrame">Overview</a></td><td><a href="http://www.erlang.org/"><img src="erlang.png" align="right" border="0" alt="erlang logo"></a></td></tr></table></div>
 <hr>
 
-<h1>Module class_TraceSupervisor</h1>
-<ul class="index"><li><a href="#description">Description</a></li><li><a href="#types">Data Types</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>The <b>trace supervisor class</b> allows to monitor the traces managed by
- a trace aggregator.
+<h1>Module class_Traceable</h1>
+<ul class="index"><li><a href="#description">Description</a></li><li><a href="#types">Data Types</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>Interface class implementing the Traceable trait, so that the instances 
+having that trait can send traces by whichever means is the most appropriate, 
+whether or not they are actually full-blown class_TraceEmitter instances, or 
+have a trace_bridge registered, or just have to rely on the most basic traces.
 
 
-<h2><a name="description">Description</a></h2>The <b>trace supervisor class</b> allows to monitor the traces managed by
- a trace aggregator.
+<h2><a name="description">Description</a></h2><p>Interface class implementing the Traceable trait, so that the instances 
+having that trait can send traces by whichever means is the most appropriate, 
+whether or not they are actually full-blown class_TraceEmitter instances, or 
+have a trace_bridge registered, or just have to rely on the most basic traces.</p>
+
+ By providing the most lightweight way of emitting traces, such a trait favors
+ composition over multiple inheritance; otherwise many concrete classes would
+ derive more than once from the class_TraceEmitter one (this would be a minor
+ nuisance) or, worse, other traits would induce in turn a class_TraceEmitter
+ inheritance, each time they would have to send a trace (whereas interfaces
+ introducing the use of actual classes is not felt desirable; we prefer that
+ such interfaces derive from this Traceable one).
 
 <h2><a name="types">Data Types</a></h2>
 
@@ -37,6 +49,10 @@
 
 <h3 class="typedecl"><a name="type-instance_pid">instance_pid()</a></h3>
 <p><tt>instance_pid() = pid()</tt></p>
+
+
+<h3 class="typedecl"><a name="type-message">message()</a></h3>
+<p><tt>message() = <a href="traces.html#type-message">traces:message()</a></tt></p>
 
 
 <h3 class="typedecl"><a name="type-method_argument">method_argument()</a></h3>
@@ -83,12 +99,8 @@
 <p><tt>requests_outcome() = <a href="wooper.html#type-requests_outcome">wooper:requests_outcome()</a></tt></p>
 
 
-<h3 class="typedecl"><a name="type-supervisor_outcome">supervisor_outcome()</a></h3>
-<p><tt>supervisor_outcome() = no_trace_supervisor_wanted | <a href="#type-supervisor_pid">supervisor_pid()</a></tt></p>
-
-
-<h3 class="typedecl"><a name="type-supervisor_pid">supervisor_pid()</a></h3>
-<p><tt>supervisor_pid() = pid()</tt></p>
+<h3 class="typedecl"><a name="type-trace_severity">trace_severity()</a></h3>
+<p><tt>trace_severity() = <a href="traces.html#type-trace_severity">traces:trace_severity()</a></tt></p>
 
 
 <h2><a name="index">Function Index</a></h2>
@@ -122,6 +134,9 @@
 <tr><td valign="top"><a href="#is_wooper_debug-0">is_wooper_debug/0</a></td><td></td></tr>
 <tr><td valign="top"><a href="#popFromAttribute-2">popFromAttribute/2</a></td><td></td></tr>
 <tr><td valign="top"><a href="#removeAttribute-2">removeAttribute/2</a></td><td></td></tr>
+<tr><td valign="top"><a href="#send-3">send/3</a></td><td>Sends a trace from that traceable instance.</td></tr>
+<tr><td valign="top"><a href="#send_safe-3">send_safe/3</a></td><td>Sends a trace from that traceable instance, echoing it through basic 
+traces as well.</td></tr>
 <tr><td valign="top"><a href="#setAttribute-3">setAttribute/3</a></td><td></td></tr>
 <tr><td valign="top"><a href="#setAttributes-2">setAttributes/2</a></td><td></td></tr>
 <tr><td valign="top"><a href="#subtractFromAttribute-3">subtractFromAttribute/3</a></td><td></td></tr>
@@ -320,6 +335,29 @@
 <p><tt>removeAttribute(State::<a href="wooper.html#type-state">wooper:state()</a>, AttributeName::<a href="#type-attribute_name">attribute_name()</a>) -&gt; <a href="wooper.html#type-state">wooper:state()</a></tt><br></p>
 <p> </p>
 </div>
+
+<h3 class="function"><a name="send-3">send/3</a></h3>
+<div class="spec">
+<p><tt>send(Severity::<a href="#type-trace_severity">trace_severity()</a>, State::<a href="wooper.html#type-state">wooper:state()</a>, Message::<a href="#type-message">message()</a>) -&gt; <a href="#type-void">void()</a></tt><br></p>
+<p> </p>
+</div><p><p>Sends a trace from that traceable instance.</p>
+
+ <p>Message is a plain string.</p>
+
+ (helper)
+</p>
+
+<h3 class="function"><a name="send_safe-3">send_safe/3</a></h3>
+<div class="spec">
+<p><tt>send_safe(Severity::<a href="#type-trace_severity">trace_severity()</a>, State::<a href="wooper.html#type-state">wooper:state()</a>, Message::<a href="#type-message">message()</a>) -&gt; <a href="#type-void">void()</a></tt><br></p>
+<p> </p>
+</div><p><p>Sends a trace from that traceable instance, echoing it through basic 
+traces as well.</p>
+
+ <p>Message is a plain string.</p>
+
+ (helper)
+</p>
 
 <h3 class="function"><a name="setAttribute-3">setAttribute/3</a></h3>
 <div class="spec">
