--- a/api-doc/overview-summary.html
+++ b/api-doc/overview-summary.html
@@ -12,9 +12,9 @@
 </h1>
 <p>Copyright © 2021 Olivier Boudeville
 </p>
-<p><b>Version:</b> API 1.0.16
+<p><b>Version:</b> API 1.0.20
 </p>
-<p><b>Authors:</b> Olivier Boudeville (<a href="mailto:olivier (dot) boudeville (at) esperide (dot) com"><tt>olivier (dot) boudeville (at) esperide (dot) com</tt></a>).</p>
+<p><b>Authors:</b> Olivier Boudeville (<a href="mailto:olivier (dot) boudeville (at) esperide (dot) com"><code>olivier (dot) boudeville (at) esperide (dot) com</code></a>).</p>
 <p><b>References</b><ul><li>See the <a href="http://traces.esperide.org" target="_blank">Traces official website</a> or <a href="https://olivier-boudeville.github.io/Ceylan-Traces/index.html" target="_blank">its mirror</a>
 </li><li>In terms of dependency, for additional information one may refer to:
 <ul>
@@ -28,7 +28,7 @@
 <p><code>Ceylan-Traces</code> provides Erlang applications with advanced trace services, so that the user can efficiently log, browse and search through detailed runtime messages that may be emitted concurrently (i.e. in a parallel, distributed way) by all kinds of processes.
 </p>
 
-<p>This website presents the documentation of the API (<em>Application Programming Interface</em>) of Traces version 1.0.16 (as of Sunday, March 19, 2023).
+<p>This website presents the documentation of the API (<em>Application Programming Interface</em>) of Traces version 1.0.20 (as of Thursday, January 4, 2024).
 </p>
 
 
